2005-08-23  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Moved the --disable-gnome switch at the beginning
	and made GNOME_DOC_INIT depend on it.

2005-08-23  Julien Puydt  <jpuydt@free.fr>

	* help/omf.make: Use @PACKAGE_NAME@ instead of @PACKAGE@.

2005-08-22  Damien Sandras  <dsandras@gnome.org>

	* help/Makefile.am: Use @PACKAGE_NAME@ instead of gnomemeeting.
	
2005-08-21  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Fixed message for gconf_test_age.

2005-08-21  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/endpoint.h: Big changes in prevision of 
	video support. Use the new video model and the new GDK 
	PVideoOutputDevice plugin.

	* src/gdkvideoio.cpp, src/gdkvideoio.h: Modified existing code to
	turn it into a PVideoOuputDevice plugin.

	* src/gnomemeeting.cpp: Removed duplicate code.

	* src/urlhandler.cpp: Removed unuseful function.

	* src/vfakeio.cpp, src/vfakeio.h: Ported code to the new video model,
	fixed stuff.
	
	* src/videograbber.cpp, src/videograbber.h: Major code refactoring
	to comply with the new video model.

2005-08-09  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Applied patch by fcrozat to help with parameters
	detection in headers.

	* lib/gm_conf-widget_extensions.c: Check there is a child before
	trying to read the value. Added due to side-effect of patch in bug
	#145416 which triggers the deactivate signal for all GtkOptionMenu
	GtkMenuShells when the main menu is selected.

2005-08-07  Damien Sandras  <dsandras@gnome.org>

	* src/pref_window.cpp: Fixed sound events output devices list. Fixes
	Debian #313174.

	* src/endpoint.h,.cpp: Fixed method overloading.
		
2005-07-24  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented OPAL version.

	* src/vfakeio.cpp, vfakeio.h: Adapted to RobsVideo tag of ptlib_unix.
	
2005-08-02  Julien Puydt  <jpuydt@free.fr>
	
	* help/C/gnomemeeting.xml, help/gnomemeeting.omf.in, help/Makefile.am,