@@ -1,5 +1,10 @@
 2005-08-23  Julien Puydt  <jpuydt@free.fr>
 
+	* configure.in, src/sound_handling.cpp, src/sound_handling.h: Made
+	esound a gnome dependancy (ie: no esound if gnome is disabled).
+	
+2005-08-23  Julien Puydt  <jpuydt@free.fr>
+
 	* configure.in: Moved the --disable-gnome switch at the beginning
 	and made GNOME_DOC_INIT depend on it.
 
